# 3dsar

./: .env  .gitignore  Dockerfile  docker-compose.yml  example_aircraft_hypothesis.json  pyproject.toml  setup.sh
.devcontainer/: devcontainer.json  docker-compose.yml
src/python/simulation/: __init__.py  main.py  pomdp_sar_main.py  sar_environement.py  sar_environement_main.py  sar_pomdp_environement.py  sar_probability_maps.py  sar_with_custom_maps.py
src/python/simulation/core/: entities.py
src/python/simulation/planning/: pomdp_planner.py  probability_maps.py
src/python/simulation/sarenvironement/: sar_pomdp_environement.py
tests/python/: test_matplotlib.py
